welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:15: error: reassignment to val
      i = i + 1
        ^